Issue 5033 - CL text overflow and limit

--- a/src/components/select-control/editor.scss
+++ b/src/components/select-control/editor.scss
@@ -22,10 +22,11 @@ body.maxi-blocks--active select.maxi-select-control__input {
 	cursor: pointer;
 	opacity: 1;
 	outline: 0;
+	text-overflow: ellipsis;
+
 	svg {
 		fill: var(--maxi-grey-4-color);
 	}
-
 	.maxi-option {
 		&__in-use {
 			color: var(--maxi-green-1-color);
